# ray_ground_classifier_ros1

autoware_msgs/: CMakeLists.txt  package.xml
autoware_msgs/msg/: PointClusters.msg  PointXYZIF.msg
ray_ground_classifier/: CMakeLists.txt  package.xml
ray_ground_classifier/include/ray_ground_classifier/: algorithm.hpp  common_2d.hpp  common_3d.hpp  interval.hpp  lidar_utils.hpp  point_cloud_utils.hpp  ray_aggregator.hpp  ray_ground_classifier.hpp  ray_ground_point_classifier.hpp  types.hpp
ray_ground_classifier/src/: CMakeLists.txt  point_cloud_utils.cpp  ray_aggregator.cpp  ray_ground_classifier.cpp  ray_ground_classifier_types.cpp  ray_ground_point_classifier.cpp
ray_ground_classifier_nodes/: CMakeLists.txt  package.xml
ray_ground_classifier_nodes/include/ray_ground_classifier_nodes/: ray_ground_classifier_cloud_node.hpp
ray_ground_classifier_nodes/launch/: node.launch
ray_ground_classifier_nodes/src/: ray_ground_classifier_cloud_node.cpp  ray_ground_classifier_nodes.cpp
ray_ground_classifier_nodes/test/src/: test_ray_ground_classifier_nodes.cpp
